parser/tests/snapshots/errors__emit_no_args.snap
---
source: parser/tests/errors.rs
expression: "err_string(parse_emit_statement, true, \"emit x\")"

---
error: unexpected end of file
  ┌─ [test snippet]:1:7
  │
1 │ emit x
  │       ^


